# cmake-vscode-ready

./: .gitignore  CMakeLists.txt  README.md  run.sh  run_cmake_with_color.py
